// protoc --go_out=./proto/webApi/ --micro_out=./proto/webApi ./proto/webApi/webApi.proto
syntax = "proto3";

option go_package = "./;go_micro_api_webApi";

service WebApi {
	rpc AddLottery(Request) returns (Response) {}
	rpc GetLotteryList(Request) returns (Response) {}
	rpc GetInfoByUserId(Request) returns (Response) {}
	rpc GetListByUserId(Request) returns (Response) {}
	rpc Login(Request) returns (Response) {}
	rpc Register(Request) returns (Response) {}
}

message Pair {
		string key = 1;
		repeated string values = 2;
}

message Request {
	string method = 1;
	string path = 2;
	map<string, Pair> header = 3;
	map<string, Pair> get = 4;
	map<string, Pair> post = 5;
	string body = 6;
	string url = 7;
}

message Response {
	int32 statusCode = 1;
	map<string, Pair> header = 2;
	string body = 3;
}
